Added_logout_page

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -50,7 +50,7 @@
             <a class="a btn btn-primary btn-sm" href="{% url 'additions' %}">Доходы</a>
             <a class="a btn btn-primary btn-sm" href="{% url 'substractions' %}">Расходы</a>
             <a class="a btn btn-primary btn-sm" href="{% url 'delete_page' %}">Удаление</a>
-            <a class="a btn btn-primary btn-sm" href="{% url 'logout' %}">Выйти из аккаунта</a>
+            <a class="a btn btn-primary btn-sm" href="{% url 'logout_page' %}">Выйти из аккаунта</a>
         </nav>
     </div>
     {% block main %}
